tests/NormalTests/paczka1/small_fuzzy/79498157.err
Error in line 3: iAO6hv A433 62,8
Error in line 4: 27Na S70 86,2
